LU-376 Positive LL_DIR_END_OFF to indicate the tail of dir hash/offset

1) Keep 'DIR_END_OFF' unchanged (0xfffffffffffffffeULL) to simplify dir
   hash/offset related interoperability issues.
2) Introduce positive "LL_DIR_END_OFF" (0x7fffffffffffffffULL) on client
   to indicate the tail of dir hash/offset for up layer callers, like
   llseek(), readdir(), and so on.
3) Support 1.8 client to talk with old 2.0 server with 32bit hash.
4) Wire protocol check for 'DIR_END_OFF'.

Change-Id: I126ddb170b9ee24d1ae0610ac6343c9b0f5e4c70
Signed-off-by: nasf <yong.fan@whamcloud.com>